# yolov8-onnx-cpp

./: CMakeLists.txt  yolov8_onnxruntimeConfig.cmake.in  yolov8_onnxruntimeConfigVersion.cmake.in
.devcontainer/: devcontainer.json
docker/: Dockerfile-DevContainer
include/yolov8_onnxruntime/nn/: autobackend.h
include/yolov8_onnxruntime/utils/: augment.h  viz.h
src/: main.cpp
src/nn/: autobackend.cpp  onnx_model_base.cpp
src/utils/: augment.cpp  common.cpp
